--- a/Snake/Snake.csproj
+++ b/Snake/Snake.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Direction.cs" />
     <Compile Include="Figure.cs" />
     <Compile Include="FoodCreator.cs" />
+    <Compile Include="Finish.cs" />
     <Compile Include="HorizontalLine.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
