--- a/Snake/Snake.csproj
+++ b/Snake/Snake.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Snake.cs" />
+    <Compile Include="StartScreen.cs" />
     <Compile Include="TimeOfPlaying.cs" />
     <Compile Include="VerticalLine.cs" />
     <Compile Include="Walls.cs" />
